# scopex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  README.md  config.json  encryptx.py  pyproject.toml  requirements.txt  scopex.py
.github/: DESCRIPTION  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
assets/: demo.cast
core/: __init__.py  config.py  context.py  findings.py  orchestrator.py
plugins/: __init__.py  base_plugin.py  cms_scanner.py  compliance.py  network_vulns.py  runner.py  service_vulns.py  ssl_vulns.py  ssrf_scanner.py  subdomain_takeover.py
reports/: __init__.py  dashboard.html  dashboard.py  json_report.py  pdf_report.py  sarif_report.py
rules/: admin_panel.yaml  exposed_env.yaml  exposed_git.yaml
scanners/: __init__.py  api_scanner.py  auth_scanner.py  auth_state_manager.py  base_scanner.py  cookie_scanner.py  crawler.py  custom_rules_scanner.py  dns_scanner.py  header_scanner.py  info_disclosure.py  port_scanner.py  sqli_scanner.py  ssl_scanner.py  subdomain_scanner.py  tech_fingerprinter.py  vuln_scanner.py  waf_detector.py  whois_scanner.py  xss_scanner.py
scripts/: generate_demo.py  generate_pdf_preview.py  generate_terminal_screenshot.py
tests/: conftest.py  test_api_scanner.py  test_custom_rules.py  test_dashboard.py  test_deduplication.py  test_exception_swallowing.py  test_findings.py  test_helpers.py  test_json_report.py  test_nuclei_orchestrator.py  test_plugin_isolation.py  test_port_scanner.py  test_sqli_scanner.py  test_subdomain_scanner.py  test_vuln_scanner.py  test_waf_evasion.py  test_whois_scanner.py  test_xss_scanner.py
tests/fixtures/: clean_responses.json  test_targets.json  vulnerable_responses.json
tests/integration/: test_full_scan.py
utils/: banner.py  crawler.py  deduplication.py  helpers.py  logging_config.py  nuclei_integration.py  nuclei_orchestrator.py  waf_evasion.py
