[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopex"
version = "2.0.0"
description = "ScopeX: Premium Agentic Web Security Scanner & Assessment Engine"
readme = "README.md"
authors = [
    { name = "Ganesh Kumar" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "httpx[http2]>=0.27.0",
    "fpdf2>=2.7.8",
    "beautifulsoup4>=4.12.3",
    "loguru>=0.7.0",
    "python-nmap>=0.7.1",
    "rapidfuzz>=3.0.0",
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "respx>=0.20.0",
]

[project.scripts]
scopex = "scopex:cli"

[tool.setuptools]
packages = ["core", "scanners", "plugins", "reports", "utils"]
py-modules = ["scopex"]
